[project]
name = "rag-langgraph-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "sathwik-reddy-m",email = "sathwikreddym79@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
